--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,7 @@ jobs:
           command: |
             cd build-cmake
             ctest --output-junit results.xml --verbose -j4
+            cd ../shadowdash_test && ./manifest_compile.sh
       - store_test_results:
           path: build-cmake
 
