--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,14 +20,19 @@ jobs:
           command: |
             cp .clang-tidy /tmp/.clang-tidy
       - run:
-          name: Run clang-tidy, build ninja and run ctest
+          name: Run clang-tidy, build ninja 
           command: |
               mkdir build
               cd build
               cmake ..
               cmake --build .
               make
-              ctest
+      - run:
+          name: Run tests
+          command: |
+              ctest -T test
+      - store_test_results:
+              path: build/Testing
 
 
 # Orchestrate jobs using workflows
