--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,9 @@ cmake_minimum_required(VERSION 3.15)
 include(CheckSymbolExists)
 include(CheckIPOSupported)
 
+# Enable testing
+enable_testing()
+
 # Config clang-tidy
 find_program(CLANG_TIDY_EXE NAMES clang-tidy)
 if(CLANG_TIDY_EXE)
@@ -320,6 +323,11 @@ if(BUILD_TESTING)
   endif()
 
   add_test(NAME NinjaTest COMMAND ninja_test)
+  add_test(NAME build_log_perftest COMMAND build_log_perftest)
+  add_test(NAME canon_perftest COMMAND canon_perftest)
+  add_test(NAME clparser_perftest COMMAND clparser_perftest)
+  add_test(NAME elide_middle_perftest COMMAND elide_middle_perftest)
+  add_test(NAME hash_collision_bench COMMAND hash_collision_bench)
 endif()
 
 if(NINJA_BUILD_BINARY)
