--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,10 @@ jobs:
       - run:
           name: Run Tests
           command: |
+            ctest
             ./cicd-build/ninja_test
+            ./build-cmake/manifest_parser_perftest
+            
 workflows:
   version: 2
   build_and_test:
