debugged circle ci yml file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,21 +50,24 @@ jobs:
       - run: 
           name: Run Compile .o and .so Tests
           command: |
+            check_success() {
+              if [ $? -eq 0 ]; then
+                echo "$1"
+              else
+                echo "$1"
+                exit 1
+              fi
+            }
+
+            cd src/shadowdash
+
             g++ -std=c++17 -fPIC -c manifest.cc  manifest.h
-            if [ $? -eq 0 ]; then
-              echo ".o compiled successfully"
-            else
-              echo "failed"
-              exit 1
-            fi
+            check_success ".o compiled successfully"
 
             g++ -shared -o manifest.so manifest.o
-            if [ $? -eq 0 ]; then
-              echo ".so compiled successfully"
-            else
-              echo "failed"
-              exit 1
-            fi
+            check_success ".so compiled successfully"
+
+            cd ../..
 
 
 workflows:
