--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 executors:
   docker-executor:
     docker:
-      - image: cloudcomputing321/ninja-image:latest
+      - image: cloudcomputing321/shadowdash:latest
 
 jobs:
   build:
@@ -35,7 +35,9 @@ jobs:
           name: Run Tests In Parallelism with CTests
           command: |
             cd build-cmake
-            ctest --verbose -j4
+            ctest --output-junit results.xml --verbose -j4
+      - store_test_results:
+          path: build-cmake
 
 workflows:
   version: 2
