--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,8 @@
 /out/
 
 commands.md
+
+# New Language files
+src/shadowdash/manifest.o
+src/shadowdash/manifest.so
+src/shadowdash/manifest.h.gch
